--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-</head>
+    <script>
 
-<body>
+    </script>
+  </head>
+
+<body style="background-color: #272727">
   <!-- Navbar-->
-  <nav class="navbar navbar-expand-sm bg-color" style="background-color: #EC3599;">
+  <nav class="navbar navbar-expand-sm bg-color" style="background-color: #101010;">
     <!-- Home link -->
     <div class="container-fluid">
       <div class="navbar-header">
@@ -38,91 +41,104 @@
 
   <!-- Header -->
   <header>
-
+      <div class="name-card flex-container">
+        <div><img src="headshot.jpg" alt="headshot" id="headshot-img"></div>
+        <div class="name-card-text flex-container">
+          <div><h1>Elaine<p>Kodama</p></h1></div>
+          <div><h4 style="font-style: italic; font-weight: lighter;">Front-end Developer</h4></div>
+          <div><h4>Some more description about me! Some more description about me!</h4></div>
+        </div>
+      </div>
   </header>
-  <!--
-  <div class="container-fluid name-block align-items-center">
-    <div class="container name-card">
-      <h1 class="name">Elaine<p>Kodama</p></h1>
-      <h4 class="name-title" style="font-style: italic;">Front-end Developer</h4>
-      <h4 class="desc">Some more description about me!</h4>
-      <span><img src="headshot.png" alt="headshot" class="headshot"></span>
-    </div>
-  </div>
-  -->
 
-  <div class="container" style="margin-top: 20px;">
+  <!-- Projects -->
+  <div class="container" style="margin-top: 40px;">
     <h3>
       Recent Work
     </h3>
   </div>
   <div class="container-fluid">
+    <!-- Projects Aquarium & Scrabble -->
     <div class="row justify-content-center align-items-center">
       <div class="col-xl-4 col-lg-5 col-md-6">
-        <div class="card proj">
-          <img class="card-img-top img-responsive" src="winnie.jpeg" alt="Aquarium">
-          <div class="card-body">
-            <h4 class="card-title proj-name">Aquarium</h4>
-            <p class="card-text proj-lang">Java</p>
-            <p class="card-text proj-desc">An aquarium game</p>
+        <a class="proj-link" href="aquarium.html">
+          <div class="card proj" style="border: none;">
+            <img class="card-img-top img-responsive" src="winnie.jpeg" alt="Aquarium">
+            <div class="card-body">
+              <h4 class="card-title proj-name">Aquarium</h4>
+              <p class="card-text proj-lang">Java</p>
+              <p class="card-text proj-desc" id="proj-desc">An aquarium game</p>
+            </div>
           </div>
-        </div>
+        </a>
       </div>
       <div class="col-xl-4 col-lg-5 col-md-6">
-        <div class="card proj">
-          <img class="card-img-top img-responsive" src="winnie.jpeg" alt="Aquarium">
-          <div class="card-body">
-            <h4 class="card-title proj-name">Aquarium</h4>
-            <p class="card-text proj-lang">Java</p>
-            <p class="card-text proj-desc">An aquarium game</p>
+        <a class="proj-link" href="aquarium.html">
+          <div class="card proj" style="border: none;">
+            <img class="card-img-top img-responsive" src="winnie.jpeg" alt="Aquarium">
+            <div class="card-body">
+              <h4 class="card-title proj-name">Aquarium</h4>
+              <p class="card-text proj-lang">Java</p>
+              <p class="card-text proj-desc">An aquarium game</p>
+            </div>
           </div>
-        </div>
+        </a>
       </div>
     </div>
 
+    <!-- Projects Flashcards & Evite System -->
     <div class="row justify-content-center align-items-center">
       <div class="col-xl-4 col-lg-5 col-md-6">
-        <div class="card proj">
-          <img class="card-img-top img-responsive" src="winnie.jpeg" alt="Aquarium">
-          <div class="card-body">
-            <h4 class="card-title proj-name">Aquarium</h4>
-            <p class="card-text proj-lang">Java</p>
-            <p class="card-text proj-desc">An aquarium game</p>
+        <a class="proj-link" href="aquarium.html">
+          <div class="card proj" style="border: none;">
+            <img class="card-img-top img-responsive" src="winnie.jpeg" alt="Aquarium">
+            <div class="card-body">
+              <h4 class="card-title proj-name">Aquarium</h4>
+              <p class="card-text proj-lang">Java</p>
+              <p class="card-text proj-desc">An aquarium game</p>
+            </div>
           </div>
-        </div>
+          </a>
       </div>
       <div class="col-xl-4 col-lg-5 col-md-6">
-        <div class="card proj">
-          <img class="card-img-top img-responsive" src="winnie.jpeg" alt="Aquarium">
-          <div class="card-body">
-            <h4 class="card-title proj-name">Aquarium</h4>
-            <p class="card-text proj-lang">Java</p>
-            <p class="card-text proj-desc">An aquarium game</p>
+        <a class="proj-link" href="aquarium.html">
+          <div class="card proj" style="border: none;">
+            <img class="card-img-top img-responsive" src="winnie.jpeg" alt="Aquarium">
+            <div class="card-body">
+              <h4 class="card-title proj-name">Aquarium</h4>
+              <p class="card-text proj-lang">Java</p>
+              <p class="card-text proj-desc">An aquarium game</p>
+            </div>
           </div>
-        </div>
+        </a>
       </div>
     </div>
 
+    <!-- Projects 5 & 6 -->
     <div class="row align-items-center justify-content-center">
       <div class="col-xl-4 col-lg-5 col-md-6">
-        <div class="card proj">
-          <img class="card-img-top img-responsive" src="winnie.jpeg" alt="Aquarium">
-          <div class="card-body">
-            <h4 class="card-title proj-name">Aquarium</h4>
-            <p class="card-text proj-lang">Java</p>
-            <p class="card-text proj-desc">An aquarium game</p>
+        <a class="proj-link" href="aquarium.html">
+          <div class="card proj" style="border: none;">
+            <img class="card-img-top img-responsive" src="winnie.jpeg" alt="Aquarium">
+            <div class="card-body">
+              <h4 class="card-title proj-name">Aquarium</h4>
+              <p class="card-text proj-lang">Java</p>
+              <p class="card-text proj-desc">An aquarium game</p>
+            </div>
           </div>
-        </div>
+          </a>
       </div>
       <div class="col-xl-4 col-lg-5 col-md-6">
-        <div class="card proj">
-          <img class="card-img-top img-responsive" src="winnie.jpeg" alt="Aquarium">
-          <div class="card-body">
-            <h4 class="card-title proj-name">Aquarium</h4>
-            <p class="card-text proj-lang">Java</p>
-            <p class="card-text proj-desc">An aquarium game</p>
+        <a class="proj-link" href="aquarium.html">
+          <div class="card proj" style="border: none;">
+            <img class="card-img-top img-responsive" src="winnie.jpeg" alt="Aquarium">
+            <div class="card-body">
+              <h4 class="card-title proj-name">Aquarium</h4>
+              <p class="card-text proj-lang">Java</p>
+              <p class="card-text proj-desc">An aquarium game</p>
+            </div>
           </div>
-        </div>
+          </a>
       </div>
     </div>
   </div>
@@ -130,9 +146,31 @@
 </body>
 
 <footer>
+  <!-- Links -->
   <div class="container-fluid">
     <div class="row align-items-center">
-      <div class="col-l-3 col-md-5" style="margin-top: 2%; margin-bottom: 2%;">
+      <div class="col-l-3 col-md-5 d-flex justify-content-center" id="footer-link">
+        <div class="flex-container connect-text">
+          <div><h2>Let's Connect!</h2></div>
+          <div>
+            <a href="cv.html">CV</a>
+            <a href="blog.html" style="margin-left: 5px;">Blog</a>
+            <a href="portfolio.html" style="margin-left: 5px;">Resume</a>
+          </div>
+          <div>
+            <a class="link" href="github.com" style="text-decoration: none;">
+              <img src="github.png" alt="GitHub Cat" style="padding: 5px;">
+            </a>
+            <a class="link" href="linkedin.com" style="text-decoration: none;">
+              <img src="linkedin.png" alt="LinkedIn Logo" style="padding: 5px;">
+            </a>
+          </div>
+        </div>
+      </div>
+  <!--
+  <div class="container-fluid">
+    <div class="row align-items-center">
+      <div class="col-l-3 col-md-5" id="footer-link" style="margin-top: 2%; margin-bottom: 2%;">
         <h2>Let's Connect!</h2>
         <a href="cv.html">CV</a>
         <a href="blog.html" style="margin-left: 5px;">Blog</a>
@@ -145,7 +183,9 @@
           <img src="linkedin.png" alt="LinkedIn Logo" style="padding: 5px;">
         </a>
       </div>
+    -->
 
+      <!-- Leave a message -->
       <div class="col-l-9 col-md-7" style="margin-top: 2%; margin-bottom: 2%;">
         <div class="row justify-content-center align-items-center">
           <div class="col">
@@ -159,12 +199,11 @@
             </div>
           </div>
         </div>
-
         <form>
           <div class="form-group" style="padding: 5px;">
             <textarea type="message" class="form-control input-text input-shadow" id="messageInput" placeholder="Message" rows="3"></textarea>
           </div>
-          <button type="submit" class="button-submit input-shadow">Submit</button>
+          <button type="submit" class="button-submit">Submit</button>
         </form>
       </div>
 </footer>
