--- a/cv.html
+++ b/cv.html
@@ -2,66 +2,124 @@
 
 <head>
     <title>Kodama CV</title>
-    <link href="style.css" rel="stylesheet">
+    <link href="cv-style.css" rel="stylesheet">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- navbar -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+    <link href="shared-style.css" rel="stylesheet">
 </head>
 
-<body style="position: relative;" data-spy="scroll" data-target="#myScrollspy" data-offset="20">
-    <nav class="navbar navbar-expand-sm bg-color">
-        <!-- Links -->
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <a class="navbar-brand" href="index.html">Elaine Kodama</a>
-          </div>
-        </div>
+<body style="position: relative; background: #272727;" data-spy="scroll" data-target="#myScrollspy" data-offset="20">
+  <nav class="flexbox">
+  <!-- Home link -->
+    <a class="navbar-brand" href="index.html" style="margin-left: 20px;">
+      <img src="media/logo.png" alt="EK logo">
+    </a> 
+  <!-- Other links-->
+    <ul>
+      <li class="nav-item">
+        <a class="nav-link" href="cv.html">CV</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="blog.html">Blog</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="media/Resume.pdf">Resume</a>
+      </li>
+    </ul>
+  </nav>
 
-        <div class="justify-content-end collapse navbar-collapse">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="portfolio.html">Portfolio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="cv.html"><b>CV</b></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="blog.html">Blog</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-
-    <div class="container-fluid">
-      <div class="row">
-        <nav class="col-sm-3" id="myScrollspy">
-          <ul class="nav nav-pills flex-column">
-            <li class="active"><a href="#section1">Section 1</a></li>
-            <li><a href="#section2">Section 2</a></li>
-            <li><a href="#section3">Section 3</a></li>
-            <li><a href="#section4">Section 4</a></li>
-          </ul>
-        </nav>
-        <div class="col-sm-9">
-          <div id="section1">
-            <h1>Section 1</h1>
-            <p>TO DO!</p>
-          </div>
-          <div id="section2">
-            <h1>Section 2</h1>
-            <p>TO DO!</p>
-          </div>
-          <div id="section3">
-            <h1>Section 3</h1>
-            <p>TO DO!</p>
-          </div>
-          <div id="section4">
-            <h1>Section 4</h1>
-            <p>TO DO!</p>
-          </div>
-        </div>
-      </div>
+    <div class="sidebar" id="sb">
+      <a class="bc active" href="#about">About</a>
+      <a class="bc" href="#experience">Experience</a>
+      <a href="#skills">Skills</a>
+      <a class="bc" href="#education">Education</a>
+      <a href="#courses">Relevant Courses</a>
+      <a href="#volunteer">Volunteer</a>
+      <a href="#activities">Activities</a>
+    <div style="position: relative;">
+      <a class="link" href="https://github.com/elainekodama" style="text-decoration: none;">
+        <i class="bi-github" role="img" aria-label="GitHub" style="font-size: 1em; padding: 5px;"></i>
+      </a>
+      <a class="link" href="https://www.linkedin.com/in/elaine-kodama/" style="text-decoration: none;">
+        <i class="bi bi-linkedin" style="font-size: 1em; padding: 5px;"></i>
+      </a>
     </div>
-  
+  </div>
+    
+    <div class="content">
+      <h1 id="about">About</h1>
+      <p>Hello, I am a software developer that is very motivated and passionate about my work.
+         I am looking for back-end or full-stack experience as I take pride in writing clean and organized code, I love to solve puzzles, and I am very detail-oriented.</p>
+      <p>At the University of Southern California, I am pursuing a computer programming minor, in which I have a 4.0 in, and I have spent my free time self-teaching myself and working on projects, like this website.
+         I started coding less than 2 years ago, but I hope that my work and efforts prove my desire and receptiveness to learn.</p>
+      <h1 id="experience">Experience</h1>
+      <h3>Viterbi School of Engineering— USC</h3>
+      <p>Teaching Assistant/Grader (ITP-368)</p>
+      <p>Los Angeles, CA</p>
+      <p>Spring 2022</p>
+      <ul>
+        <li>Supports Professor Barret Koster in a graphical user interface class</li>
+        <li>Assists students in utilizing the JavaFX library, applying principles of object-oriented
+        programming, and understanding fundamental design aspects such as accessibility, localization, and best-practice software design</li>
+        <li>Provides help on assignments and learning concepts in class two hours a week, and in office hours four hours a week</li>
+        <li>Grades half of the weekly assignments and labs for a class of ~30 students</li>
+      </ul>
+      <h3>Viterbi School of Engineering— USC</h3>
+      <p>Teaching Assistant/Grader (ITP-265)</p>
+      <p>Los Angeles, CA</p>
+      <p>Fall 2021, Spring 2022</p>
+      <ul>
+        <li>Reinforces key concepts of inheritance, polymorphism, abstract classes and interfaces to help students understand object-oriented design</li>
+        <li>Aids students in office hours two hours a week and during class four hours a week for two class sections of ~40 students</li>
+        <li>Collaborates every week with professor and other teaching assistants to prepare lecture material, homework assignments, and exams</li>
+      </ul>
+      <h3>Coding Earth</h3>
+      <p>Tutor</p>
+      <p>Los Angeles, CA</p>
+      <p>August 2020 – Present</p>
+      <ul>
+        <li>Teaches students from intermediate school to high school basic coding to prepare them for college</li>
+        <li>Prepares lesson plans for 1-hour sessions and assigns homework for ~10 students in Python and Java</li>
+        <li>Provides support for current college students in Python, Java, Swift, or C++ over Zoom</li>
+      </ul>
+      <h3>Center for Neural Engineering—USC</h3>
+      <p>Research Assistant</p>
+      <p>Los Angeles, CA</p>
+      <p>January – November 2021</p>
+      <ul>
+        <li>Collaborated with a team to identify key mechanisms involving mitochondria in the development of neurodegenerative diseases</li>
+        <li>Developed brain cell models to isolate each energy-consuming mechanisms in NEURON for 8 hours a week</li>
+        <li>Received $3000 funding from Summer Undergraduate Research Fund to facilitate one-on-one mentoring with faculty</li>
+      </ul>
+      <h3>Digestive Disease Consultants</h3>
+      <p>Medical Scribe for Dr. Kevin Kodama</p>
+      <p>Fresno, CA</p>
+      <p>May – August 2018, 2019</p>
+      <ul>
+        <li>Documented ~23 gastroenterology patient (in-office) encounters a day into EPIC medical records, including patients’ chief complaints;
+        physician’s assessment and plan; and medication, procedure, lab, and/or referral orders (SOAP)</li>
+        <li>Developed clinical experience by learning medical terminology and proper medical record documentation</li>
+      </ul>
+    
+      <h1 id="skills">Skills</h1>
+        <h3>Java</h3>
+        <h3>Python</h3>
+        <h3>Swift</h3>
+      <h1 id="education">Education</h1>
+        <h3>University of Southern California</h3>
+        <p>Environmental Science and Health, B.S.</p>
+        <p>Computer Programming Minor</p>
+        <p>2019-2022</p>
+        <p>Awards and Honors:</p>
+      <h1 id="courses">Relevant Courses</h1>
+        <h3>ITP-115</h3>
+        <p>Introduction to Python</p>
+      <h1 id="volunteer">Volunteering</h1>
+      <h1 id="activities">Activities</h1>
+    </div>
+
+
   </body>
