--- a/blog.html
+++ b/blog.html
@@ -1,36 +1,40 @@
 <!DOCTYPE html>
 
-<title>Kodama Blog</title>
-
-<link href="style.css" rel="stylesheet">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <title>Kodama Blog</title>
+    <link href="cv-style.css" rel="stylesheet">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- navbar -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
 </head>
 
-<body>
-<nav class="navbar navbar-expand-sm bg-color">
-    <!-- Links -->
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="index.html">Elaine Kodama</a>
-      </div>
+<body style="background: #272727;">
+  <nav class="navbar navbar-expand-lg">
+    <a class="navbar-brand" href="index.html" style="margin-left: 20px;">
+      <img src="media/logo.png" alt="EK logo">
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
+      <i class="bi bi-list" style="font-size: 2em; color: white;"></i>
+    </button>
+  
+    <div class="collapse navbar-collapse justify-content-end" id="navbarToggle" style="margin-right: 15px;">
+      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" href="cv.html">CV</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="blog.html">Blog</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="media/Resume.pdf">Resume</a>
+        </li>
+      </ul>
     </div>
+  </nav>
 
-    <div class="justify-content-end collapse navbar-collapse">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="portfolio.html">Portfolio</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="cv.html">CV</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="blog.html"><b>Blog</b></a>
-      </li>
-    </ul>
+  <div>
+    <h1 style="color: white">Coming soon...</h1>
   </div>
-</nav>
 </body>
