--- a/index.html
+++ b/index.html
@@ -7,19 +7,21 @@
   <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <link href="shared-style.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
 </head>
 
 <body style="background-color: #272727;">
-  <nav class="flexbox">
-    <!-- Home link -->
-      <a class="navbar-brand" href="index.html" style="margin-left: 20px;">
-        <img src="media/logo.png" alt="EK logo">
-      </a> 
-    <!-- Other links-->
-      <ul>
+  <nav class="navbar navbar-expand-lg">
+    <a class="navbar-brand" href="index.html" style="margin-left: 20px;">
+      <img src="media/logo.png" alt="EK logo">
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
+      <i class="bi bi-list" style="font-size: 2em; color: white;"></i>
+    </button>
+  
+    <div class="collapse navbar-collapse justify-content-end" id="navbarToggle" style="margin-right: 15px;">
+      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
         <li class="nav-item">
           <a class="nav-link" href="cv.html">CV</a>
         </li>
@@ -30,33 +32,38 @@
           <a class="nav-link" href="media/Resume.pdf">Resume</a>
         </li>
       </ul>
-    </nav>
+    </div>
+  </nav>
 
   <!-- Header -->
   <div class="jumbotron">
-      <div class="name-card flex-container">
-        <div><img src="media/headshot.jpg" alt="headshot" id="headshot-img"></div>
-        <div class="name-card-text flex-container">
-          <div><h1>Elaine<p>Kodama</p></h1></div>
-          <div><h4 style="font-style: italic; font-weight: lighter;">Software Developer</h4></div>
-          <div><h4><!-- Need description --></h4></div>
-        </div>
+    <div class="flex-container name-card">
+      <div><img src="media/headshot.jpg" alt="headshot" id="headshot-img"></div>
+      <div class="name-card-text flex-container">
+        <div id="name">Elaine Kodama</div>
+        <div id="software-developer">Software Developer</div>
+        <div id="description">Building software for problem-solving and entertainment</div>
       </div>
     </div>
+  </div>
 
   <!-- Projects -->
-  <div class="container" style="margin-top: 40px;">
-    <h3>
-      Recent Work
-    </h3>
-  </div>
+
   <div class="container-fluid">
-    <!-- Projects Aquarium & Scrabble -->
     <div class="row justify-content-center align-items-center">
       <div class="col-xl-4 col-lg-5 col-md-6">
+        <div id="header-title" style="width: 424px;">
+          Recent Work
+        </div>
+      </div>
+      <div class="col-xl-4 col-lg-6 col-md-7"><div style="width: 424px;"></div></div>
+    </div>
+    <!-- Projects Aquarium & Scrabble -->
+    <div class="row justify-content-center">
+      <div class="col-xl-4 col-lg-5">
         <a class="proj-link" href="https://github.com/elainekodama/play-aquarium.git">
           <div class="card proj" style="border: none;">
-            <img class="card-img-top img-responsive" src="media/aquarium.png" alt="Aquarium" style="height: 250px;">
+            <img class="card-img-top img-responsive proj-pic" src="media/aquarium.png" alt="Aquarium">
             <div class="card-body">
               <h4 class="card-title proj-name">Aquarium</h4>
               <p class="card-text proj-lang">JavaFX</p>
@@ -65,10 +72,10 @@
           </div>
         </a>
       </div>
-      <div class="col-xl-4 col-lg-5 col-md-6">
+      <div class="col-xl-4 col-lg-5">
         <a class="proj-link" href="https://github.com/elainekodama/scrabble.git">
           <div class="card proj" style="border: none;">
-            <img class="card-img-top img-responsive" src="media/scrabble2.jpg" alt="Scrabble" style="height: 250px;">
+            <img class="card-img-top img-responsive proj-pic" src="media/scrabble.jpg" alt="Scrabble">
             <div class="card-body">
               <h4 class="card-title proj-name">Scrabble</h4>
               <p class="card-text proj-lang">JavaFX</p>
@@ -81,10 +88,10 @@
 
     <!-- Projects Flashcards & Evite System -->
     <div class="row justify-content-center align-items-center">
-      <div class="col-xl-4 col-lg-5 col-md-6">
+      <div class="col-xl-4 col-lg-5">
         <a class="proj-link" href="https://github.com/elainekodama/flashcards.git">
           <div class="card proj" style="border: none;">
-            <img class="card-img-top img-responsive" src="media/winnie.jpeg" alt="Aquarium" style="height: 250px;">
+            <img class="card-img-top img-responsive proj-pic" src="media/flashcards.png" alt="Flashcards">
             <div class="card-body">
               <h4 class="card-title proj-name">Mobile Flashcards</h4>
               <p class="card-text proj-lang">Swift, iOS, Firebase</p>
@@ -93,10 +100,10 @@
           </div>
           </a>
       </div>
-      <div class="col-xl-4 col-lg-5 col-md-6">
+      <div class="col-xl-4 col-lg-5">
         <a class="proj-link" href="https://github.com/elainekodama/evite.git">
           <div class="card proj" style="border: none;">
-            <img class="card-img-top img-responsive" src="media/evite.png" alt="Aquarium" style="height: 250px;">
+            <img class="card-img-top img-responsive proj-pic" src="media/evite.png" alt="Aquarium">
             <div class="card-body">
               <h4 class="card-title proj-name">Evite System</h4>
               <p class="card-text proj-lang">Java</p>
@@ -108,6 +115,64 @@
     </div>
   </div>
 
+  <!-- Skills -->
+  <div class="container-fluid">
+    <div class="row justify-content-center align-items-center">
+      <div class="col-xl-4 col-lg-5 col-md-7">
+        <div id="header-title" style="width: 424px;">
+          Skills
+        </div>
+      </div>
+      <div class="col-xl-4 col-lg-6 col-md-7"><div style="width: 424px;"></div></div>
+    </div>
+
+  <div class="row justify-content-center align-items-center">
+    <div class="col-xl-4 col-lg-5">
+      <div class="container" style="width: 424px; margin: 20px auto; position: relative; padding: 5px;">
+        <h4 class="proj-name" style="color: white;">Organized</h4>
+        <p class="proj-desc" style="color: white;">Comitted to writing efficient yet readable code</p>
+        <h4 class="proj-name" style="color: white;">Detail-Oriented</h4>
+        <p class="proj-desc" style="color: white;">User interfaces are very concise, from screen size to individual pixel</p>
+        <h4 class="proj-name" style="color: white;">Motivated</h4>
+        <p class="proj-desc" style="color: white;">I am passionate about programming and determined to solve any problem</p>
+      </div>
+    </div>
+    <div class="col-xl-4 col-lg-5">
+      <div class="container" style="width: 424px; margin: 20px auto; position: relative; padding: 0;">
+
+        <div class="progress" style="margin: 20px auto; height: 30px;">
+          <div class="progress-bar" role="progressbar" style="width: 60%; background-color: #EC3599; text-align: start; padding: 5px;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">Java</div>
+        </div>
+
+        <div class="progress" style="margin: 20px auto; height: 30px;">
+          <div class="progress-bar" role="progressbar" style="width: 40%; background-color: #EC3599; text-align: start; padding: 5px;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">C++</div>
+
+        </div>
+        <div class="progress" style="margin: 20px auto; height: 30px;">
+          <div class="progress-bar" role="progressbar" style="width: 50%; background-color: #EC3599; text-align: start; padding: 5px;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">Python</div>
+        </div>
+        <div class="progress" style="margin: 20px auto; height: 30px;">
+          <div class="progress-bar" role="progressbar" style="width: 40%; background-color: #EC3599; text-align: start; padding: 5px;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">HTML/CSS</div>
+        </div>
+
+        <div class="progress" style="margin: 20px auto; height: 30px;">
+          <div class="progress-bar" role="progressbar" style="width: 30%; background-color: #EC3599; text-align: start; padding: 5px;" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">Swift</div>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+
+  <div class="container-fluid">
+    <div class="row justify-content-center align-items-center">
+      <div class="col-xl-4 col-lg-5 col-md-7">
+        <div id="header-title" style="width: 424px;">
+          About
+        </div>
+      </div>
+      <div class="col-xl-4 col-lg-6 col-md-7"><div style="width: 424px;"></div></div>
+    </div>
+    </div>
 </body>
 
 <footer>
@@ -115,44 +180,44 @@
   <div class="container-fluid">
     <div class="row align-items-center">
       <div class="col-l-3 col-md-5 d-flex justify-content-center" id="footer-link">
-        <div class="flex-container connect-text">
-          <div><h2>Let's Connect!</h2></div>
-          <div>
+        <div class="flex-container footer-text" id="">
+          <div class="connect-text">Let's Connect!</div>
+          <div class="cvblogres" style="margin-top: 10px; margin-bottom: 10px;">
             <a href="cv/cv.html">CV</a>
             <a href="blog.html" style="margin-left: 5px;">Blog</a>
             <a href="media/Resume.pdf" style="margin-left: 5px;">Resume</a>
           </div>
-          <div>
+          <div style="margin-top: 10px;">
             <a class="link" href="https://github.com/elainekodama" style="text-decoration: none;">
-              <i class="bi-github" role="img" aria-label="GitHub" style="font-size: 2em; padding: 5px;"></i>
+              <i class="bi-github" role="img" aria-label="GitHub" style="font-size: 1em; padding: 5px;"></i>
             </a>
             <a class="link" href="https://www.linkedin.com/in/elaine-kodama/" style="text-decoration: none;">
-              <i class="bi bi-linkedin" style="font-size: 2em; padding: 5px;"></i>
+              <i class="bi bi-linkedin" style="font-size: 1em; padding: 5px;"></i>
             </a>
           </div>
         </div>
       </div>
 
       <!-- Leave a message -->
-      <div class="col-l-9 col-md-7" style="margin-top: 2%; margin-bottom: 2%;">
-        <div class="row justify-content-center align-items-center flex">
-          <div class="col">
-            <div class="form-group" style="padding: 5px;">
-              <input type="name" class="form-control input-text input-shadow" id="nameInput" placeholder="Name">
+      <div class="col-l-9 col-md-7" style="margin-top: 3%; margin-bottom: 2%;">
+          <div class="row justify-content-center align-items-center flex">
+            <div class="col">
+              <div class="form-group" style="padding: 5px;">
+                <input type="name" class="form-control input-text input-shadow" id="nameInput" placeholder="Name">
+              </div>
+            </div>
+            <div class="col">
+              <div class="form-group" style="padding: 5px;">
+                <input type="email" class="form-control input-text input-shadow" id="emailInput" placeholder="Email">
+              </div>
             </div>
           </div>
-          <div class="col">
+          <form>
             <div class="form-group" style="padding: 5px;">
-              <input type="email" class="form-control input-text input-shadow" id="emailInput" placeholder="Email">
+              <textarea type="message" class="form-control input-text input-shadow" id="messageInput" placeholder="NOT IMPLEMENTED YET" rows="3"></textarea>
             </div>
-          </div>
-        </div>
-        <form>
-          <div class="form-group" style="padding: 5px;">
-            <textarea type="message" class="form-control input-text input-shadow" id="messageInput" placeholder="NOT IMPLEMENTED YET" rows="3"></textarea>
-          </div>
-          <button type="submit" class="button-submit">Submit</button>
-        </form>
+            <button type="submit" class="button-submit">Submit</button>
+          </form>
       </div>
     </div>
   </div>
