update fonts and content

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
   <div class="container-fluid">
     <div class="row justify-content-center align-items-center">
-      <div class="col-xl-4 col-lg-5 col-md-6">
+      <div class="col-xl-4 col-lg-5">
         <div id="header-title" style="width: 424px;">
           Recent Work
         </div>
@@ -67,7 +67,7 @@
             <div class="card-body">
               <h4 class="card-title proj-name">Aquarium</h4>
               <p class="card-text proj-lang">JavaFX</p>
-              <p class="card-text proj-desc" id="proj-desc">A virtual aquarium game where users can buy, sell, and collect coins to grow your aquatic environment</p>
+              <p class="card-text proj-desc">A virtual aquarium game where users can buy, sell, and collect coins to grow your aquatic environment</p>
             </div>
           </div>
         </a>
@@ -118,7 +118,7 @@
   <!-- Skills -->
   <div class="container-fluid">
     <div class="row justify-content-center align-items-center">
-      <div class="col-xl-4 col-lg-5 col-md-7">
+      <div class="col-xl-4 col-lg-5">
         <div id="header-title" style="width: 424px;">
           Skills
         </div>
@@ -141,22 +141,22 @@
       <div class="container" style="width: 424px; margin: 20px auto; position: relative; padding: 0;">
 
         <div class="progress" style="margin: 20px auto; height: 30px;">
-          <div class="progress-bar" role="progressbar" style="width: 60%; background-color: #EC3599; text-align: start; padding: 5px;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">Java</div>
+          <div class="progress-bar" role="progressbar" style="width: 50%; background-color: #EC3599; text-align: start; padding: 5px;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">Java</div>
         </div>
 
         <div class="progress" style="margin: 20px auto; height: 30px;">
-          <div class="progress-bar" role="progressbar" style="width: 40%; background-color: #EC3599; text-align: start; padding: 5px;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">C++</div>
+          <div class="progress-bar" role="progressbar" style="width: 50%; background-color: #EC3599; text-align: start; padding: 5px;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">C++</div>
 
         </div>
         <div class="progress" style="margin: 20px auto; height: 30px;">
           <div class="progress-bar" role="progressbar" style="width: 50%; background-color: #EC3599; text-align: start; padding: 5px;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">Python</div>
         </div>
         <div class="progress" style="margin: 20px auto; height: 30px;">
-          <div class="progress-bar" role="progressbar" style="width: 40%; background-color: #EC3599; text-align: start; padding: 5px;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">HTML/CSS</div>
+          <div class="progress-bar" role="progressbar" style="width: 50%; background-color: #EC3599; text-align: start; padding: 5px;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">HTML/CSS</div>
         </div>
 
         <div class="progress" style="margin: 20px auto; height: 30px;">
-          <div class="progress-bar" role="progressbar" style="width: 30%; background-color: #EC3599; text-align: start; padding: 5px;" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">Swift</div>
+          <div class="progress-bar" role="progressbar" style="width: 50%; background-color: #EC3599; text-align: start; padding: 5px;" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">Swift</div>
         </div>
       </div>
     </div>
@@ -177,17 +177,17 @@
 
 <footer>
   <!-- Links -->
-  <div class="container-fluid">
-    <div class="row align-items-center">
+  <div class="container-fluid footer-container">
+    <div class="row align-items-center"  style="background-color: #EC3599;">
       <div class="col-l-3 col-md-5 d-flex justify-content-center" id="footer-link">
         <div class="flex-container footer-text" id="">
           <div class="connect-text">Let's Connect!</div>
-          <div class="cvblogres" style="margin-top: 10px; margin-bottom: 10px;">
+          <div style="margin-top: 10px; margin-bottom: 10px; align-items: center;">
             <a href="cv/cv.html">CV</a>
             <a href="blog.html" style="margin-left: 5px;">Blog</a>
             <a href="media/Resume.pdf" style="margin-left: 5px;">Resume</a>
           </div>
-          <div style="margin-top: 10px;">
+          <div style="margin-top: 10px; align-items: center;">
             <a class="link" href="https://github.com/elainekodama" style="text-decoration: none;">
               <i class="bi-github" role="img" aria-label="GitHub" style="font-size: 1em; padding: 5px;"></i>
             </a>
