--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </nav>
 
   <!-- Header -->
-  <div class="jumbotron">
+  <div class="hero">
     <div class="flex-container name-card">
       <div><img src="media/headshot.jpg" alt="headshot" id="headshot-img"></div>
       <div class="name-card-text flex-container">
@@ -52,11 +52,11 @@
   <div class="container-fluid">
     <div class="row justify-content-center align-items-center">
       <div class="col-xl-4 col-lg-5">
-        <div id="header-title" style="width: 424px;">
+        <div id="header-title" style="max-width: 424px;">
           Recent Work
         </div>
       </div>
-      <div class="col-xl-4 col-lg-6 col-md-7"><div style="width: 424px;"></div></div>
+      <div class="col-xl-4 col-lg-6 col-md-7"><div style="max-width: 424px;"></div>
     </div>
     <!-- Projects Aquarium & Scrabble -->
     <div class="row justify-content-center">
@@ -119,11 +119,11 @@
   <div class="container-fluid">
     <div class="row justify-content-center align-items-center">
       <div class="col-xl-4 col-lg-5">
-        <div id="header-title" style="width: 424px;">
+        <div id="header-title" style="max-width: 424px;">
           Skills
         </div>
       </div>
-      <div class="col-xl-4 col-lg-6 col-md-7"><div style="width: 424px;"></div></div>
+      <div class="col-xl-4 col-lg-6 col-md-7"><div style="max-width: 424px;"></div></div>
     </div>
 
   <div class="row justify-content-center align-items-center">
@@ -166,19 +166,19 @@
   <div class="container-fluid">
     <div class="row justify-content-center align-items-center">
       <div class="col-xl-4 col-lg-5 col-md-7">
-        <div id="header-title" style="width: 424px;">
+        <div id="header-title" style="max-width: 424px;">
           About
         </div>
       </div>
-      <div class="col-xl-4 col-lg-6 col-md-7"><div style="width: 424px;"></div></div>
+      <div class="col-xl-4 col-lg-6 col-md-7"><div style="max-width: 424px;"></div></div>
     </div>
     </div>
 </body>
 
 <footer>
   <!-- Links -->
-  <div class="container-fluid footer-container">
-    <div class="row align-items-center"  style="background-color: #EC3599;">
+  <div class="container-fluid" style="background-color: #EC3599;">
+    <div class="row align-items-center">
       <div class="col-l-3 col-md-5 d-flex justify-content-center" id="footer-link">
         <div class="flex-container footer-text" id="">
           <div class="connect-text">Let's Connect!</div>
@@ -200,6 +200,7 @@
 
       <!-- Leave a message -->
       <div class="col-l-9 col-md-7" style="margin-top: 3%; margin-bottom: 2%;">
+        <form id="javascript_form">
           <div class="row justify-content-center align-items-center flex">
             <div class="col">
               <div class="form-group" style="padding: 5px;">
@@ -208,16 +209,15 @@
             </div>
             <div class="col">
               <div class="form-group" style="padding: 5px;">
-                <input type="email" class="form-control input-text input-shadow" id="emailInput" placeholder="Email">
+                <input type="text" name="subject" class="form-control input-text input-shadow" id="emailInput" placeholder="Email">
               </div>
             </div>
           </div>
-          <form>
-            <div class="form-group" style="padding: 5px;">
-              <textarea type="message" class="form-control input-text input-shadow" id="messageInput" placeholder="NOT IMPLEMENTED YET" rows="3"></textarea>
-            </div>
-            <button type="submit" class="button-submit">Submit</button>
-          </form>
+          <div class="form-group" style="padding: 5px;">
+            <textarea type="message" name="text" class="form-control input-text input-shadow" id="messageInput" placeholder="NOT IMPLEMENTED YET" rows="3"></textarea>
+          </div>
+          <button type="submit" class="button-submit" id="js_send" value="Send">Submit</button>
+        </form>
       </div>
     </div>
   </div>
