footer, about, activities

--- a/cv.html
+++ b/cv.html
@@ -57,7 +57,7 @@
 
   <div class="row" data-spy="scroll" data-target="menu" data-offset="20" style="margin-right:0;">
     <!-- sidebar menu  style="position: relative; box-sizing: border-box;"-->
-    <div class="col-md-3 col-12 lol" style="background-color: #101010;">
+    <div class="col-md-3 col-12 lol" style="background-color: #101010; padding-bottom: 20px;">
       <div class="menu sticky-top">
         <a class="menu-item active" href="#about">About</a>
         <a class="menu-item" href="#experience">Experience</a>
@@ -79,7 +79,7 @@
       <!-- about -->
       <h1 id="about">About</h1>
       <p class="desc">Hello, I am a software developer that is very motivated and passionate about my work.
-        I am looking for back-end or full-stack experience as I take pride in writing clean and organized code, I love to solve puzzles, and I am very detail-oriented.</p>
+        I am looking for full-stack experience as I take pride in writing clean and organized code, I love to solve puzzles, and I am very detail-oriented.</p>
       <p class="desc">At the University of Southern California, I am pursuing a computer programming minor, in which I have a 4.0 in, and I have spent my free time self-teaching and working on projects, like this website.
         I started coding less than 2 years ago, but I hope that my work and efforts prove my desire and receptiveness to learn.</p>
     
@@ -119,10 +119,10 @@
       <ul class="desc">
         <li>Documented ~23 gastroenterology patient (in-office) encounters a day into EPIC medical records, including patients’ chief complaints; physician’s assessment and plan; and medication, procedure, lab, and/or referral orders (SOAP)</li>
         <li>Developed clinical experience by learning medical terminology and proper medical record documentation</li>
-      </ul>
+      </ul class="desc">
       <h2 class="title">Student Ambassador<span class="title2"> Vanderbilt Call Center</h2>
       <h3 class="subtitle">Nashville, TN/August - December 2018</h3>
-      <ul class="desc">
+      <ul>
         <li>Networked with over 100 Vanderbilt alumni in 8 hours a week to keep them connected to the university</li>
         <li>Contributed to raising around $500,000 for university programs, scholarships, and building funds</li>
       </ul>
@@ -217,7 +217,15 @@
       <p></p>
       <!-- other activities-->
       <h1 id="activities">Activities</h1>
-    
+      <div class="title">Japanese Student Association</div>
+      <div class="subtitle">USC</div>
+      <p></p>
+      <div class="title">Gamma Phi Beta sorority</div>
+      <div class="subtitle">USC</div>
+      <p></p>
+      <div class="title">Phi Gamma Nu Professional Fraternity</div>
+      <div class="subtitle">USC</div>
+      <p></p>
     </div>
   </div>
 
@@ -225,7 +233,7 @@
 
 <footer>
   <!-- Links -->
-  <div class="container-fluid" style="background-color: #EC3599;">
+  <div class="container-fluid" style="background-color: #EC3599; padding: 10px;">
     <div class="row align-items-center">
       <div class="col-l-3 col-md-5 d-flex justify-content-center" id="footer-link">
         <div class="flex-container footer-text" id="">
