--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           Recent Work
         </div>
       </div>
-      <div class="col-xl-4 col-lg-6 col-md-7"><div style="max-width: 424px;"></div>
+      <div class="col-xl-4 col-lg-5"><div style="max-width: 424px;"></div>
     </div>
     <!-- Projects Aquarium & Scrabble -->
     <div class="row justify-content-center">
@@ -123,64 +123,83 @@
           Skills
         </div>
       </div>
-      <div class="col-xl-4 col-lg-6 col-md-7"><div style="max-width: 424px;"></div></div>
+      <div class="col-xl-4 col-lg-5"><div style="max-width: 424px;"></div></div>
     </div>
 
-  <div class="row justify-content-center align-items-center">
-    <div class="col-xl-4 col-lg-5">
-      <div class="container" style="width: 424px; margin: 20px auto; position: relative; padding: 5px;">
-        <h4 class="proj-name" style="color: white;">Organized</h4>
-        <p class="proj-desc" style="color: white;">Comitted to writing efficient yet readable code</p>
-        <h4 class="proj-name" style="color: white;">Detail-Oriented</h4>
-        <p class="proj-desc" style="color: white;">User interfaces are very concise, from screen size to individual pixel</p>
-        <h4 class="proj-name" style="color: white;">Motivated</h4>
-        <p class="proj-desc" style="color: white;">I am passionate about programming and determined to solve any problem</p>
-      </div>
-    </div>
-    <div class="col-xl-4 col-lg-5">
-      <div class="container" style="width: 424px; margin: 20px auto; position: relative; padding: 0;">
-
-        <div class="progress" style="margin: 20px auto; height: 30px;">
-          <div class="progress-bar" role="progressbar" style="width: 50%; background-color: #EC3599; text-align: start; padding: 5px;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">Java</div>
-        </div>
-
-        <div class="progress" style="margin: 20px auto; height: 30px;">
-          <div class="progress-bar" role="progressbar" style="width: 50%; background-color: #EC3599; text-align: start; padding: 5px;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">C++</div>
-
-        </div>
-        <div class="progress" style="margin: 20px auto; height: 30px;">
-          <div class="progress-bar" role="progressbar" style="width: 50%; background-color: #EC3599; text-align: start; padding: 5px;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">Python</div>
-        </div>
-        <div class="progress" style="margin: 20px auto; height: 30px;">
-          <div class="progress-bar" role="progressbar" style="width: 50%; background-color: #EC3599; text-align: start; padding: 5px;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">HTML/CSS</div>
-        </div>
-
-        <div class="progress" style="margin: 20px auto; height: 30px;">
-          <div class="progress-bar" role="progressbar" style="width: 50%; background-color: #EC3599; text-align: start; padding: 5px;" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">Swift</div>
+    <div class="row justify-content-center align-items-center">
+      <div class="col-xl-4 col-lg-5">
+        <div class="container" style="max-width: 424px; margin: 20px auto; position: relative; padding: 5px;">
+          <h4 class="proj-name" style="color: white;">Organized</h4>
+          <p class="proj-desc" style="color: white;">Comitted to writing efficient yet readable code</p>
+          <h4 class="proj-name" style="color: white;">Detail-Oriented</h4>
+          <p class="proj-desc" style="color: white;">User interfaces are very concise, from screen size to individual pixel</p>
+          <h4 class="proj-name" style="color: white;">Motivated</h4>
+          <p class="proj-desc" style="color: white;">I am passionate about programming and determined to solve any problem</p>
         </div>
       </div>
+      <div class="col-xl-4 col-lg-5">
+        <div class="container" style="max-width: 424px; margin: 20px auto; position: relative; padding: 0;">
+
+          <div class="progress"  style="margin: 20px auto; height: 30px;">
+            <div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">Java</div>
+          </div>
+
+          <div class="progress" style="margin: 20px auto; height: 30px;">
+            <div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">C++</div>
+          </div>
+
+          <div class="progress" style="margin: 20px auto; height: 30px;">
+            <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">Python</div>
+          </div>
+
+          <div class="progress" style="margin: 20px auto; height: 30px;">
+            <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">Swift</div>
+          </div>
+
+          <div class="progress" style="margin: 20px auto; height: 30px;">
+            <div class="progress-bar" role="progressbar" style="width: 40%;" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">HTML/CSS</div>
+          </div>
+        </div>
+      </div>
     </div>
-  </div>
   </div>
 
   <div class="container-fluid">
     <div class="row justify-content-center align-items-center">
-      <div class="col-xl-4 col-lg-5 col-md-7">
+      <div class="col-xl-4 col-lg-5">
         <div id="header-title" style="max-width: 424px;">
           About
         </div>
       </div>
-      <div class="col-xl-4 col-lg-6 col-md-7"><div style="max-width: 424px;"></div></div>
+      <div class="col-xl-4 col-lg-5"><div style="max-width: 424px;"></div></div>
     </div>
+
+    <div class="row justify-content-center align-items-center">
+        <div class="container" id="about-box">
+          <p class="about-text" style="font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+          font-size: 20px;
+          font-weight: normal;
+          color:#FFFFFF;
+          max-width: 848px;">Hello, I am a senior at the University of Southern California. I will be graduating in May 2022 with a Bachelor's of Science in environmental health and science and a minor in computer programming.
+          Coming from a pre-medical background, I have extensive knowledge of the natural, physical, and environmental sciences as well as professional experience in the healthcare field.</p>
+          <p class="about-text" style="font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+          font-size: 20px;
+          font-weight: normal;
+          color:#FFFFFF;">I became interested in computer programming after a mobile app idea I had, and was determined to build that program.
+           It have since become really passionate about coding, as it is a place where I can apply both my creativity and problem-solving skills.
+           I am an ambitious software developer that strives to create user-friendly and reliable programs.
+           I am looking for full-stack or mobile app experience to apply my creativity and strong knowledge of object-oriented programming to build software applications for any problem.</p>
+        </div>
     </div>
+  </div>
 </body>
 
-<footer>
+<footer style="background-color: #EC3599; padding: 10px; margin-top: 40px;">
   <!-- Links -->
-  <div class="container-fluid" style="background-color: #EC3599;">
+  <div class="container-fluid">
     <div class="row align-items-center">
       <div class="col-l-3 col-md-5 d-flex justify-content-center" id="footer-link">
-        <div class="flex-container footer-text" id="">
+        <div class="flex-container footer-text">
           <div class="connect-text">Let's Connect!</div>
           <div style="margin-top: 10px; margin-bottom: 10px; align-items: center;">
             <a href="cv/cv.html">CV</a>
