--- a/cv.html
+++ b/cv.html
@@ -57,7 +57,7 @@
 
   <div class="row" data-spy="scroll" data-target="menu" data-offset="20" style="margin-right:0;">
     <!-- sidebar menu  style="position: relative; box-sizing: border-box;"-->
-    <div class="col-md-3 col-12 lol" style="background-color: #101010; padding-bottom: 20px;">
+    <div class="col-md-3 col-12 lol" style="background-color: #101010;">
       <div class="menu sticky-top">
         <a class="menu-item active" href="#about">About</a>
         <a class="menu-item" href="#experience">Experience</a>
