private repo links

--- a/flashcards.html
+++ b/flashcards.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-    <title>Aquarium</title>
+    <title>My Flashcards</title>
     <link href="project-style.css" rel="stylesheet">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -39,9 +39,11 @@
   <nav aria-label="breadcrumb">
     <ol class="breadcrumb" style="margin: 20px;">
       <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-      <li class="breadcrumb-item active" aria-current="page">Aquarium</li>
+      <li class="breadcrumb-item active" aria-current="page">My Flashcards</li>
     </ol>
   </nav>
-  
+
+    <p class="text-center" id="title">My Flashcards</p>
+    <p class="text-center" id="description">An iOS iPad app that allows users to hand write flashcards to study and organize them into folders and sets.</p>
 
 </body>
