--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </a>
       </div>
       <div class="col-xl-4 col-lg-5">
-        <a class="proj-link" href="https://github.com/elainekodama/scrabble.git">
+        <a class="proj-link" href="scrabble.html">
           <div class="card proj" style="border: none;">
             <img class="card-img-top img-responsive proj-pic" src="media/scrabble.jpg" alt="Scrabble">
             <div class="card-body">
@@ -101,7 +101,7 @@
           </a>
       </div>
       <div class="col-xl-4 col-lg-5">
-        <a class="proj-link" href="https://github.com/elainekodama/evite.git">
+        <a class="proj-link" href="evite.html">
           <div class="card proj" style="border: none;">
             <img class="card-img-top img-responsive proj-pic" src="media/evite.png" alt="Aquarium">
             <div class="card-body">
