--- a/scrabble.html
+++ b/scrabble.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-    <title>Aquarium</title>
+    <title>Scrabble</title>
     <link href="project-style.css" rel="stylesheet">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -39,9 +39,14 @@
   <nav aria-label="breadcrumb">
     <ol class="breadcrumb" style="margin: 20px;">
       <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-      <li class="breadcrumb-item active" aria-current="page">Aquarium</li>
+      <li class="breadcrumb-item active" aria-current="page">Scrabble</li>
     </ol>
   </nav>
+
+  <div class="words">
+    This repository has been made private as it is a class assignment.
+    <p>Please email me with your GitHub username/email for access: ek@elainekodama.com</p>
+  </div>
   
 
 </body>
