attach demo videos

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <!-- Projects Aquarium & Scrabble -->
     <div class="row justify-content-center">
       <div class="col-xl-4 col-lg-5">
-        <a class="proj-link" href="https://github.com/elainekodama/play-aquarium.git">
+        <a class="proj-link" href="aquarium.html">
           <div class="card proj" style="border: none;">
             <img class="card-img-top img-responsive proj-pic" src="media/aquarium.png" alt="Aquarium">
             <div class="card-body">
