--- a/scrabble.html
+++ b/scrabble.html
@@ -43,7 +43,11 @@
     </ol>
   </nav>
 
-  <div class="words">
+  <div class="embed-responsive embed-responsive-16by9" style="padding: 20px;">
+    <iframe class="embed-responsive-item" src="media/scrabble-demo.mp4" allowfullscreen></iframe>
+  </div>
+
+  <div class="words" style="padding: 20px;">
     This repository has been made private as it is a class assignment.
     <p>Please email me with your GitHub username/email for access: ek@elainekodama.com</p>
   </div>
