--- a/flashcards.html
+++ b/flashcards.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 
 <head>
-    <title>My Flashcards</title>
+    <title>AccesSC</title>
     <link href="project-style.css" rel="stylesheet">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- navbar -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
-</head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+    
+  </head>
 
 <body style="background: #272727;">
   <nav class="navbar navbar-expand-lg">
@@ -39,11 +43,24 @@
   <nav aria-label="breadcrumb">
     <ol class="breadcrumb" style="margin: 20px;">
       <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-      <li class="breadcrumb-item active" aria-current="page">My Flashcards</li>
+      <li class="breadcrumb-item active" aria-current="page">AccesSC</li>
     </ol>
   </nav>
 
-    <p class="text-center" id="title">My Flashcards</p>
-    <p class="text-center" id="description">An iOS iPad app that allows users to hand write flashcards to study and organize them into folders and sets.</p>
+    <div class="container-fluid" style="padding: 20px;">
+      <div class="row justify-content-center align-items-center">
+        <div class="col">
+            <img src="media/flashcards.png" alt="Flashcards Logo" style="width: 75%;">
+        </div>
+        <div class="col words">
+          <p id="title">My Flashcards</p>
+          <p>Swift, iOS, Firebase</p>
+          <p>This app allows users to study efficiently and sustainably by allowing user's to have full customization of their flashcards.</p>
+          <p>This was created as a final project for an iOS development course at USC.</p>
+          <p>Demo coming soon</p>
+          <p><a href="https://github.com/elainekodama/flashcards">GitHub Link</a></p>
+        </div>
+      </div>
+    </div>
 
 </body>
