--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <!-- Projects Flashcards & Evite System -->
     <div class="row justify-content-center align-items-center">
       <div class="col-xl-4 col-lg-5">
-        <a class="proj-link" href="https://github.com/elainekodama/flashcards.git">
+        <a class="proj-link" href="flashcards.html">
           <div class="card proj" style="border: none;">
             <img class="card-img-top img-responsive proj-pic" src="media/flashcards.png" alt="Flashcards">
             <div class="card-body">
@@ -112,6 +112,18 @@
           </div>
         </a>
       </div>
+    </div>
+    <div class="col-xl-4 col-lg-5">
+      <a class="proj-link" href="accessc.html">
+        <div class="card proj" style="border: none;">
+          <img class="card-img-top img-responsive proj-pic" src="media/accessc-logo.png" alt="AccesSC">
+          <div class="card-body">
+            <h4 class="card-title proj-name">AccesSC</h4>
+            <p class="card-text proj-lang">Swift, iOS, Firebase JavaScript</p>
+            <p class="card-text proj-desc">An interactive map that allows users to view accessible features on USC's campus</p>
+          </div>
+        </div>
+      </a>
     </div>
   </div>
 
