--- a/accessc.html
+++ b/accessc.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 
 <head>
-    <title>Scrabble</title>
+    <title>AccesSC</title>
     <link href="project-style.css" rel="stylesheet">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- navbar -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
-</head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+    
+  </head>
 
 <body style="background: #272727;">
   <nav class="navbar navbar-expand-lg">
@@ -39,30 +43,30 @@
   <nav aria-label="breadcrumb">
     <ol class="breadcrumb" style="margin: 20px;">
       <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-      <li class="breadcrumb-item active" aria-current="page">Scrabble</li>
+      <li class="breadcrumb-item active" aria-current="page">AccesSC</li>
     </ol>
   </nav>
 
-  <!--
-    2 column video on left; title, technologies, github on right
-    description on bottom
-  -->
-  <div class="container-fluid" style="padding: 20px;">
-    <div class="row justify-content-center align-items-center">
-      <div class="col">
-        <div class="embed-responsive embed-responsive-16by9" style="padding: 20px;">
-          <iframe class="embed-responsive-item" src="media/scrabble-demo.mp4" allowfullscreen></iframe>
+    <div class="container-fluid" style="padding: 20px;">
+      <div class="row justify-content-center align-items-center">
+        <div class="col">
+            <img src="media/accessc-logo.png" alt="AccesSC Logo" style="width: 75%;">
         </div>
-      </div>
-      <div class="col words">
-        <p id="title">Scrabble</p>
-        <p>Javafx, OOP</p>
-        <p>This repository has been made private as it is a class assignment.
-        <p>Please email me with your GitHub username/email for access: ek@elainekodama.com</p>
+        <div class="col words">
+          <p id="title">AccesSC</p>
+          <p>Swift, iOS</p>
+          <p>This project was developed for AthenaHacks' 2022 24 hour hackathon event with a team of 4 USC students</p>
+          <p>I was responsible for the front-end design and implementation.</p>
+          <p>Awards: AthenaHacks Favorite</p>
+          <p><a href="https://github.com/PhuongPham7112/accessible-app-2022">GitHub Link</a></p>
         </div>
       </div>
     </div>
-  </div>
-  
+    <div class="container-fluid justify-content-center" style="justify-content: center;">
+        <img src="media/log-in.png" alt="AccesSC Logo" style="width: 20%;">
+        <img src="media/sign-up.png" alt="AccesSC Logo" style="width: 20%;">
+        <img src="media/error-msg.png" alt="AccesSC Logo" style="width: 20%;">
+        <img src="media/map-view.png" alt="AccesSC Logo" style="width: 20%;">
+    </div>
 
 </body>
