--- a/aquarium.html
+++ b/aquarium.html
@@ -47,13 +47,21 @@
     </ol>
   </nav>
 
-    <div class="embed-responsive embed-responsive-16by9" style="padding: 20px;">
-      <iframe class="embed-responsive-item" src="media/aquarium-demo.mp4" allowfullscreen></iframe>
+    <div class="container-fluid" style="padding: 20px;">
+      <div class="row justify-content-center align-items-center">
+        <div class="col">
+          <div class="embed-responsive embed-responsive-16by9" style="padding: 20px;">
+            <iframe class="embed-responsive-item" src="media/aquarium-demo.mp4" allowfullscreen></iframe>
+          </div>
+        </div>
+        <div class="col words">
+          <p id="title">Aquarium</p>
+          <p>Javafx, OOP</p>
+          <p>This application was built as a final project for a graphical user interfaces course at USC.</p>
+          <p>All graphics are hand-drawn by myself!</p>
+          <p><a href="https://github.com/elainekodama/play-aquarium.git">GitHub Link</a></p>
+        </div>
+      </div>
     </div>
-
-    <div style="padding: 20px;">
-      <a href="https://github.com/elainekodama/play-aquarium.git">GitHub Link</a>
-    </div>
-
 
 </body>
