--- a/evite.html
+++ b/evite.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-    <title>Evite</title>
+    <title>Scrabble</title>
     <link href="project-style.css" rel="stylesheet">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -39,13 +39,30 @@
   <nav aria-label="breadcrumb">
     <ol class="breadcrumb" style="margin: 20px;">
       <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-      <li class="breadcrumb-item active" aria-current="page">Evite Program</li>
+      <li class="breadcrumb-item active" aria-current="page">Scrabble</li>
     </ol>
   </nav>
 
-  <div class="words">
-    This repository has been made private as it is a class assignment.
-    <p>Please email me with your GitHub username/email for access: ek@elainekodama.com</p>
+  <!--
+    2 column video on left; title, technologies, github on right
+    description on bottom
+  -->
+  <div class="container-fluid" style="padding: 20px;">
+    <div class="row justify-content-center align-items-center">
+      <div class="col">
+        <div class="embed-responsive embed-responsive-16by9" style="padding: 20px;">
+          <img src="media/evite.png" alt="evite Logo" style="width: 75%;">
+        </div>
+      </div>
+      <div class="col words">
+        <p id="title">Evite</p>
+        <p>Java, OOP</p>
+        <p>Demo coming soon</p>
+        <p>This repository has been made private as it is a class assignment.
+        <p>Please email me with your GitHub username/email for access: ek@elainekodama.com</p>
+        </div>
+      </div>
+    </div>
   </div>
   
 
