--- a/accessc.html
+++ b/accessc.html
@@ -30,9 +30,9 @@
         <li class="nav-item">
           <a class="nav-link" href="cv.html">CV</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" href="blog.html">Blog</a>
-        </li>
+        </li> -->
         <li class="nav-item">
           <a class="nav-link" href="media/Resume.pdf">Resume</a>
         </li>
@@ -58,7 +58,7 @@
           <p>This project was developed for AthenaHacks' 2022 24 hour hackathon event with a team of 4 USC students</p>
           <p>I was responsible for the front-end design and implementation.</p>
           <p>Awards: AthenaHacks Favorite</p>
-          <p><a href="https://github.com/PhuongPham7112/accessible-app-2022">GitHub Link</a></p>
+          <p><a href="https://github.com/PhuongPham7112/accessible-app-2022" style="text-decoration: underline;">GitHub Link</a></p>
         </div>
       </div>
     </div>
