--- a/flashcards.html
+++ b/flashcards.html
@@ -30,9 +30,9 @@
         <li class="nav-item">
           <a class="nav-link" href="cv.html">CV</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" href="blog.html">Blog</a>
-        </li>
+        </li> -->
         <li class="nav-item">
           <a class="nav-link" href="media/Resume.pdf">Resume</a>
         </li>
@@ -43,7 +43,7 @@
   <nav aria-label="breadcrumb">
     <ol class="breadcrumb" style="margin: 20px;">
       <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-      <li class="breadcrumb-item active" aria-current="page">AccesSC</li>
+      <li class="breadcrumb-item active" aria-current="page">Flashcards</li>
     </ol>
   </nav>
 
@@ -58,7 +58,7 @@
           <p>This app allows users to study efficiently and sustainably by allowing user's to have full customization of their flashcards.</p>
           <p>This was created as a final project for an iOS development course at USC.</p>
           <p>Demo coming soon</p>
-          <p><a href="https://github.com/elainekodama/flashcards">GitHub Link</a></p>
+          <p><a href="https://github.com/elainekodama/flashcards"  style="text-decoration: underline;">GitHub Link</a></p>
         </div>
       </div>
     </div>
