--- a/aquarium.html
+++ b/aquarium.html
@@ -30,9 +30,9 @@
         <li class="nav-item">
           <a class="nav-link" href="cv.html">CV</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" href="blog.html">Blog</a>
-        </li>
+        </li> -->
         <li class="nav-item">
           <a class="nav-link" href="media/Resume.pdf">Resume</a>
         </li>
@@ -59,7 +59,7 @@
           <p>Javafx, OOP</p>
           <p>This application was built as a final project for a graphical user interfaces course at USC.</p>
           <p>All graphics are hand-drawn by myself!</p>
-          <p><a href="https://github.com/elainekodama/play-aquarium.git">GitHub Link</a></p>
+          <p><a href="https://github.com/elainekodama/play-aquarium.git" style="text-decoration: underline;">GitHub Link</a></p>
         </div>
       </div>
     </div>
