--- a/cv.html
+++ b/cv.html
@@ -26,9 +26,9 @@
         <li class="nav-item">
           <a class="nav-link" href="cv.html">CV</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" href="blog.html">Blog</a>
-        </li>
+        </li> -->
         <li class="nav-item">
           <a class="nav-link" href="media/Resume.pdf">Resume</a>
         </li>
@@ -233,14 +233,14 @@
 
 <footer>
   <!-- Links -->
-  <div class="container-fluid" style="background-color: #EC3599; padding: 10px;">
+  <div class="container-fluid" style="background-color: #EC3599; padding: 40px 10px 50px 40px;">
     <div class="row align-items-center">
       <div class="col-l-3 col-md-5 d-flex justify-content-center" id="footer-link">
         <div class="flex-container footer-text" id="">
           <div class="connect-text">Let's Connect!</div>
           <div style="margin-top: 10px; margin-bottom: 10px; align-items: center;">
             <a href="cv/cv.html">CV</a>
-            <a href="blog.html" style="margin-left: 5px;">Blog</a>
+            <!-- <a href="blog.html" style="margin-left: 5px;">Blog</a> -->
             <a href="media/Resume.pdf" style="margin-left: 5px;">Resume</a>
           </div>
           <div style="margin-top: 10px; align-items: center;">
@@ -255,8 +255,10 @@
       </div>
 
       <!-- Leave a message -->
-      <div class="col-l-9 col-md-7" style="margin-top: 3%; margin-bottom: 2%;">
-        <form id="javascript_form">
+      <div class="col-l-9 col-md-7" style="margin-top: 3%; margin-bottom: 2%; text-align: center; color: #FFFFFF;">
+        <h3 style="color: #FFFFFF;">Email me:</h3>
+        <h3 style="color: #FFFFFF;">ek@elainekodama.com</h3>
+        <!-- <form id="javascript_form">
           <div class="row justify-content-center align-items-center flex">
             <div class="col">
               <div class="form-group" style="padding: 5px;">
@@ -273,7 +275,7 @@
             <textarea type="message" name="text" class="form-control input-text input-shadow" id="messageInput" placeholder="NOT IMPLEMENTED YET" rows="3"></textarea>
           </div>
           <button type="submit" class="button-submit" id="js_send" value="Send">Submit</button>
-        </form>
+        </form> -->
       </div>
     </div>
   </div>
