--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         <li class="nav-item">
           <a class="nav-link" href="cv.html">CV</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" href="blog.html">Blog</a>
-        </li>
+        </li> -->
         <li class="nav-item">
           <a class="nav-link" href="media/Resume.pdf">Resume</a>
         </li>
@@ -206,7 +206,7 @@
   </div>
 </body>
 
-<footer style="background-color: #EC3599; padding: 10px; margin-top: 40px;">
+<footer style="background-color: #EC3599; padding: 40px 10px 40px 10px; margin-top: 40px;">
   <!-- Links -->
   <div class="container-fluid">
     <div class="row align-items-center">
@@ -215,7 +215,7 @@
           <div class="connect-text">Let's Connect!</div>
           <div style="margin-top: 10px; margin-bottom: 10px; align-items: center;">
             <a href="cv/cv.html">CV</a>
-            <a href="blog.html" style="margin-left: 5px;">Blog</a>
+            <!-- <a href="blog.html" style="margin-left: 5px;">Blog</a> -->
             <a href="media/Resume.pdf" style="margin-left: 5px;">Resume</a>
           </div>
           <div style="margin-top: 10px; align-items: center;">
@@ -230,25 +230,27 @@
       </div>
 
       <!-- Leave a message -->
-      <div class="col-l-9 col-md-7" style="margin-top: 3%; margin-bottom: 2%;">
-        <form id="javascript_form">
+      <div class="col-l-9 col-md-7" style="margin-top: 3%; margin-bottom: 2%; text-align: center; color: #FFFFFF;">
+        <h3>Email me:</h3>
+        <h3>ek@elainekodama.com</h3>
+        <!-- <form action="https://aemail.com/Nx92" method="post" enctype="text/plain">
           <div class="row justify-content-center align-items-center flex">
             <div class="col">
               <div class="form-group" style="padding: 5px;">
-                <input type="name" class="form-control input-text input-shadow" id="nameInput" placeholder="Name">
+                <input type="text" name="Name" class="form-control input-text input-shadow" id="nameInput" placeholder="Name">
               </div>
             </div>
             <div class="col">
               <div class="form-group" style="padding: 5px;">
-                <input type="text" name="subject" class="form-control input-text input-shadow" id="emailInput" placeholder="Email">
+                <input type="text" name="Email" class="form-control input-text input-shadow" id="emailInput" placeholder="Email">
               </div>
             </div>
           </div>
           <div class="form-group" style="padding: 5px;">
-            <textarea type="message" name="text" class="form-control input-text input-shadow" id="messageInput" placeholder="NOT IMPLEMENTED YET" rows="3"></textarea>
+            <textarea type="text" name="Message" class="form-control input-text input-shadow" id="messageInput" placeholder="NOT IMPLEMENTED YET" rows="3"></textarea>
           </div>
           <button type="submit" class="button-submit" id="js_send" value="Send">Submit</button>
-        </form>
+        </form> -->
       </div>
     </div>
   </div>
