--- a/scrabble.html
+++ b/scrabble.html
@@ -26,9 +26,9 @@
         <li class="nav-item">
           <a class="nav-link" href="cv.html">CV</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" href="blog.html">Blog</a>
-        </li>
+        </li> -->
         <li class="nav-item">
           <a class="nav-link" href="media/Resume.pdf">Resume</a>
         </li>
@@ -38,7 +38,7 @@
 
   <nav aria-label="breadcrumb">
     <ol class="breadcrumb" style="margin: 20px;">
-      <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+      <li class="breadcrumb-item"><a href="index.html" style="text-decoration: none;">Home</a></li>
       <li class="breadcrumb-item active" aria-current="page">Scrabble</li>
     </ol>
   </nav>
